cabal-version:       2.2

name:                haskell-tank-battalion
version:             0.1.0.0
homepage:            https://github.com/SamTay/snake#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@pm.me
copyright:           2021 Sam Tay
category:            Web
build-type:          Simple
extra-source-files:  README.md


library
  exposed-modules:     Tank
                     , View
                     , Global
                     , Bullet
                     , Game
                     , Hitable
                     , Collectible
                     , Ammo
  hs-source-dirs:      src

  default-language: Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty

executable tank
  hs-source-dirs:      src
  other-modules:       Tank
                     , View
                     , Global
                     , Bullet
                     , Game
                     , Hitable
                     , Collectible
                     , Ammo
  main-is:             Main.hs

  default-language: Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs

  default-language: Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
                     , haskell-tank-battalion
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     